<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:layout_marginBottom="-7dp"
        android:id="@+id/progressBar"
        android:progressTint="@color/colorAccent"
        android:indeterminateTintMode="src_in"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginHorizontal="50dp"
        android:layout_below="@id/progressBar"
        android:id="@+id/logo" />

    <TextView
        android:text=""
        android:layout_below="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/update_status"
        android:layout_marginHorizontal="50dp"
        android:drawablePadding="6dp"
        android:textSize="16sp"
        android:visibility="gone" />

    <com.alespero.expandablecardview.ExpandableCardView
        android:id="@+id/latest_build"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="30dp"
        android:layout_below="@id/update_status"
        android:layout_marginHorizontal="30dp"
        app:animationDuration="300"
        app:expandOnClick="true"
        app:icon="@drawable/ic_latest_zip"
        app:inner_view="@layout/update_layout"
        app:startExpanded="false"
        app:title="@string/latest_build" />

    <com.alespero.expandablecardview.ExpandableCardView
        android:id="@+id/rominfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/latest_build"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:animationDuration="300"
        app:expandOnClick="true"
        app:icon="@drawable/ic_rom_info"
        app:inner_view="@layout/rominfo_layout"
        app:startExpanded="false"
        app:title="@string/rom_info" />

    <Button
        android:text="@string/check_update"
        android:layout_below="@id/rominfo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="30dp"
        android:textSize="13sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn"
        android:textColor="#fff"
        android:drawableStart="@drawable/ic_refresh"
        android:drawablePadding="6dp"
        android:textAllCaps="false"
        android:id="@+id/check_update"/>

    <TextView
        android:text=""
        android:layout_below="@id/check_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/last_check"
        android:layout_marginVertical="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:textColor="@color/md_disabled_text_light_theme" />

</RelativeLayout>
</ScrollView>
</RelativeLayout>
